[package]
name = "opencv-undistort"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
opencv = {version = "0.94.4", features = ["cudafilters", "cudaimgproc", "cudafilters"]}
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
